--- a/app/views/baseline/runs/run-details.njk
+++ b/app/views/baseline/runs/run-details.njk
@@ -10,12 +10,26 @@
 
 {% block content %}
 <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+    {# Include generating banner component (hidden by default unless generating) #}
+    {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
+    {% set bannerHtml %}
+      <p class="govuk-notification-banner__heading">Your draft billing file is still generating. You'll be able to continue once it's ready. Please refresh the page.</p>
+    {% endset %}
+    {% set bannerVisible = false %}
+    {% if data.billingFile and data.billingFile.generating %}
+      {% set bannerVisible = true %}
+    {% endif %}
+    {% if bannerVisible %}
+      {{ govukNotificationBanner({ titleText: 'Important', type: 'important', html: bannerHtml, id: 'billing-generating-banner' }) }}
+    {% endif %}
+  </div>
   <div class="govuk-grid-column-two-thirds">
     <form id="actionForm" method="GET" action="run-details">
       <div class="govuk-form-group" style="margin-bottom: 0;">
         <fieldset class="govuk-fieldset" aria-describedby="approval-code-hint">
 
-          {# Show different headers for different run classifications #}
+        {# Show different headers for different run classifications #}
           <span class="govuk-caption-l">
             {% if data.calcRun == "unclassified" %}Unclassified run R16
               {% elif data.calcRun == "initialRun" %}Initial classified run R16
@@ -37,7 +51,7 @@
               <td class="govuk-table__cell">2024-25</td>
             </tr>
 
-            {# Only show Classification row if calcRun is a known type #}
+          {# Only show Classification row if calcRun is a known type #}
           {% if data.calcRun in ["initialRun","testRun","interimRun","finalRecalcRun","finalRun"] %}
             <tr class="govuk-table__row">
               <th scope="row" class="govuk-table__header">Classification</th>
@@ -66,40 +80,90 @@
             </tbody>
           </table>
 
-          <!-- Download UI start -->
+          <!----------------------------------
+           Download files related to this run
+          ----------------------------------->
+
           <h2 class="govuk-heading-m">Downloads</h2>
-          <p class="govuk-body">Download files related to this calculation run.</p>
-          <a id="download-button" href="#" class="govuk-button govuk-button--secondary" role="button">
-            Results file
-          </a>
-          <p id="download-status" class="govuk-body" style="display: none; margin-top: 15px;">
+          <p class="govuk-body">
+              Download files related to this calculation run.
+            {% if data.billingConfirmed == true %}
+              The billing file sent to the FSS must reflect the latest confirmed billing instructions.
+            {% endif %}
+          </p>
+            <div class="govuk-button-group">
+              <a id="download-results" href="#" class="govuk-button govuk-button--secondary" role="button">
+                Results file
+              </a>
+              <p id="status-results" class="govuk-body" style="display: none">
+                <strong>Downloading...</strong> Please wait while we prepare your file.
+              </p>
+              {% if data.billingConfirmed == true %}
+                <a id="download-draft" href="#" class="govuk-button govuk-button--secondary" role="button" disabled="" aria-disabled="true">
+                  Draft billing file
+                </a>
+                <div class="govuk-button-group ">
+                  <a id="download-draft" href="#" class="govuk-button govuk-button--secondary" role="button" disabled="" aria-disabled="true">
+                    Generate new draft billing file
+                  </a>
+                  <p class="govuk-body">This file will reflect the latest confirmed billing instructions.</p>
+                  <p id="status-draft" class="govuk-body" style="display: none">
+                    <strong>Downloading...</strong> Please wait while we prepare your file.
+                  </p>
+                </div>
+              {% endif %}
+            </div>
+            
+
+          <p id="download-status" class="govuk-body govuk-!-margin-top-3" style="display: none;">
             <strong>Downloading...</strong> Please wait while we prepare your file.
           </p>
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-          <!-- Download UI end -->
+          
 
           <!-- Remove Classification start if it has already been classified (todo) -->
           {% if data.calcRun == "initialRun" %}
               <h2 class="govuk-heading-m">Remove this run's classification</h2>
               <p class="govuk-body">Mark this run as a test or delete it to remove its classification.</p>
+               <!-- if billing has been confirmed and billing file is being generated - then disable this button otherwise activaate-->
               <div class="govuk-button-group">
-                <a href="classify-run-remove" class="govuk-button govuk-button--secondary" style="display: inline;">Remove classification</a>
+                <a href="classify-run-remove" class="govuk-button govuk-button--secondary" style="display: inline" role="button" disabled="" aria-disabled="true">Remove classification</a>
               </div>
               <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           {% endif %}
-          <!-- Remove Classification end -->
+
+          <!-- Amend billing instructions if billing confirmed  - disable if billing file is being generated-->
+          {% if data.billingConfirmed == true %}
+              <h2 class="govuk-heading-m">Amend billing instructions</h2>
+              <p class="govuk-body">Review or change the billing instructions. If the instructions have changed, you'll need to generate a new draft billing file before you can continue.</p>
+              <div class="govuk-button-group">
+                <a href="classify-run-remove" class="govuk-button govuk-button--secondary" style="display: inline;">Amend billing instructions</a>
+              </div>
+              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+          {% endif %}
 
           {% if data.calcRun == "initialRun" %}
-
             <h2 class="govuk-heading-m">Next step</h2>
-            <p class="govuk-body">Review and confirm the billing instructions from the results file.</p>
+            
+            {% if data.billingConfirmed == true %}
+              <p class="govuk-body">Confirm that you want to send the billing file to the FSS.</p>
+              <div class="govuk-warning-text">
+                  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                  <strong class="govuk-warning-text__text">
+                    <span class="govuk-visually-hidden">Warning</span>
+                    Once sent, you will not be able to amend the billing file.
+                  </strong>
+                </div>
+              {% else%}
+              <p class="govuk-body">Review and confirm the billing instructions from the results file.</p>
+            {% endif %}
+          {% endif %}
             <div class="govuk-button-group"><a href="../billing/confirm-billing-instructions" class="govuk-button show-continue" style="display: inline;">
                 Continue
               </a>
-
               <a class="govuk-link" href="../paycal-dashboard">Return to dashboard</a>
             </div>
-          {% endif %}
+          
 
           <!-- if test run show delete run section -->
           {% if data.calcRun == "testRun" %}
@@ -137,6 +201,8 @@
                 </label>
               </div>
             </div>
+            <!-- if billing instructions if billing confirmed  - disable if billing file is being generated
+            otherwise continue to action-->
             <div class="govuk-button-group">
               <button type="submit" class="govuk-button" data-module="govuk-button">
                 Continue
